force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/vlocity_ps__CalculationMatrixVersion__c.object-meta.xml
<CustomObject>
    <description>Represents a version of a Vlocity Calculation Matrix.</description>
    <label>Vlocity Calculation Matrix Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>