force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__CalculationMatrixId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CalculationMatrixId__c</fullName>
    <label>Pricing Matrix</label>
    <referenceTo>vlocity_ps__CalculationMatrix__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Matrix Versions</relationshipLabel>
    <relationshipName>Vlocity_Calculation_Table_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>