force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CurrentStatus__c</fullName>
    <formula>IF(AND(vlocity_ps__StartDateTime__c &lt; NOW(), vlocity_ps__IsEnabled__c, OR(ISNULL(vlocity_ps__EndDateTime__c), vlocity_ps__EndDateTime__c &gt; NOW())), &quot;Active&quot;,IF(AND(NOT(ISNULL(vlocity_ps__EndDateTime__c)),vlocity_ps__EndDateTime__c &lt; NOW(), vlocity_ps__IsEnabled__c), &quot;Expired&quot;,IF(AND(vlocity_ps__StartDateTime__c &gt; NOW(), vlocity_ps__IsEnabled__c), &quot;Pending&quot;, &quot;Inactive&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>