force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__MatrixRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MatrixRecordType__c</fullName>
    <formula>vlocity_ps__CalculationMatrixId__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrix Record Type</label>
    <type>Text</type>
</CustomField>