force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__MatrixUseLongOutput__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MatrixUseLongOutput__c</fullName>
    <formula>( vlocity_ps__MatrixRecordType__c = &apos;RowVersioned&apos; &amp;&amp; vlocity_ps__CalculationMatrixId__r.vlocity_ps__VersionsWithLongOutputCount__c &gt; 0) ||  vlocity_ps__UseLongOutput__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrix Use Long Output</label>
    <type>Checkbox</type>
</CustomField>