force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__WildcardColumn__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__WildcardColumn__c</fullName>
    <formula>vlocity_ps__CalculationMatrixId__r.vlocity_ps__WildcardColumn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wildcard Column</label>
    <type>Text</type>
</CustomField>