force-app/main/default/objects/vlocity_ps__CalculationMatrixVersion__c/fields/vlocity_ps__WildcardValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__WildcardValue__c</fullName>
    <formula>vlocity_ps__CalculationMatrixId__r.vlocity_ps__WildcardValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wildcard Value</label>
    <type>Text</type>
</CustomField>